crates/solidity/testing/snapshots/bindings_output/events/custom_types/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[input.sol:13:17]
    │
 13 │         emit Log(Severity.INFO, "Testing");
    │                 ─────────────┬────────────  
    │                              ╰────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     enum Severity {
    │          ────┬───  
    │              ╰───── def: 2
  3 │         INFO,
    │         ──┬─  
    │           ╰─── def: 3
  4 │         ERROR
    │         ──┬──  
    │           ╰──── def: 4
    │ 
  7 │     event Log(
    │           ─┬─  
    │            ╰─── def: 5
  8 │         Severity level,
    │         ────┬─── ──┬──  
    │             ╰─────────── ref: 2
    │                    │    
    │                    ╰──── def: 6
  9 │         string name
    │                ──┬─  
    │                  ╰─── def: 7
    │ 
 12 │     function test() public {
    │              ──┬─  
    │                ╰─── def: 8
 13 │         emit Log(Severity.INFO, "Testing");
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── def: 9
────╯
